salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Eligibility_Override_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Override_Request_Date__c</fullName>
    <label>Eligibility Override Request Date</label>
    <type>Date</type>
</CustomField>