salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Eligibility_Override_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Override_Request_Reason__c</fullName>
    <label>Eligibility Override Request Reason</label>
    <type>TextArea</type>
</CustomField>