salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Override_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Override_Valid_From__c</fullName>
    <label>Override Valid From</label>
    <type>Date</type>
</CustomField>