salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Override_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Override_Valid_Till__c</fullName>
    <label>Override Valid Till</label>
    <type>Date</type>
</CustomField>