salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <label>Program Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>MF</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>ILIP</fullName>
            </value>
            <value>
                <fullName>RESI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>