salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Review_Decision_Reason__c.field-meta.xml
<CustomField>
    <fullName>Review_Decision_Reason__c</fullName>
    <label>Review Decision Reason</label>
    <type>TextArea</type>
</CustomField>