salesforce_sfdx/main/default/objects/Eligibility_Rule__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <label>Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Electric</fullName>
            </value>
            <value>
                <fullName>Approved Gas</fullName>
            </value>
            <value>
                <fullName>Approved Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>